--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -53,3 +53,12 @@
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf') format('truetype'),
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans') format('svg');
 }
+
+}
+
+@font-face {
+  font-family: 'Goblin One';
+  font-weight: 400;
+  font-style: normal;
+  src: url('../fonts/Goblin-One-400/Goblin-One-400.ttf') format('truetype');
+}
