--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -121,6 +121,10 @@ kbd {
 }
 
 header {
+  h1 {
+      text-align: justify;
+}
+  background-color: #fff3fc;
   width:270px;
   float:left;
   position:fixed;
