--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -122,9 +122,8 @@ kbd {
 
 header {
   h1 {
-      text-align: justify;
+      text-align: justify-all;
 }
-  background-color: #fff3fc;
   width:270px;
   float:left;
   position:fixed;
