font change for footer

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -94,7 +94,7 @@
   font-family: 'Poltawski Nowy';
   font-weight: 700;
   font-style: italic;
-  src: local('Poltawski Nowy Italic'),
+  src: local('Poltawski Nowy Bold Italic'),
        local('PoltawskiNowy-Italic'),
        url('../fonts/Poltawski-Nowy/static/PoltawskiNowy-Italic.ttf') format('truetype');
 }
