--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -123,7 +123,9 @@ kbd {
 header {
   h1 {
       text-align: justify-all;
+      color: #000000;
 }
+  font:16px'Poltawski Nowy';
   width:270px;
   float:left;
   position:fixed;
