edits of main page

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -123,6 +123,7 @@ kbd {
 header {
   h1 {
       text-align: justify-all;
+      font-size:40px;
       color: #000000;
 }
   font:16px'Poltawski Nowy';
@@ -210,7 +211,7 @@ hr {
 }
 
 footer {
-  font:16px'Poltawski Nowy';
+  font:16px'Poltawski Nowy Bold';
   width:270px;
   float:left;
   position:fixed;
