--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -29,7 +29,8 @@ h1 {
 }
 
 h2 {
-  font-family: "Poltawski Nowy Bold";
+  font-family: "Poltawski Nowy";
+  font: "Poltawski Nowy Bold";
   color:#000;
 }
 
