--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -214,7 +214,8 @@ hr {
 }
 
 footer {
-  font-family:16px "Poltawski Nowy";
+  font-family: "Poltawski Nowy";
+  font:16px;
   font-weight:700;
   font-style:normal;
   color:#000;
