editing font backend

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -129,7 +129,11 @@ header {
       font-size:40px;
       color: #000000;
 }
-  font:16px'Poltawski Nowy';
+  font-family: "Poltawski Nowy";
+  font:16px;
+  font-weight:400;
+  font-style:normal;
+  color:#000;
   width:270px;
   float:left;
   position:fixed;
@@ -216,7 +220,7 @@ hr {
 footer {
   font-family: "Poltawski Nowy";
   font:16px;
-  font-weight:700;
+  font-weight:400;
   font-style:normal;
   color:#000;
   width:270px;
