--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
       </section>
       <footer>
         <p>Contact me here: <a href = "mailto:maxie.kline@gmail.com">maxie.kline@gmail.com</a></p>
-        <p>Or here at <a href="instagram://user?username={eekmaxwell}">eekmaxwell</a> on Instagram.</p>
+        <p>Or here at <a href = "instagram://user?username=eekmaxwell">eekmaxwell</a> on Instagram.</p>
         <!---{% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
