--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -24,13 +24,15 @@ h1, h2, h3 {
 
 h1 {
   font-family: "Goblin One";
+  font-weight:400;
+  font-style:normal;
   color:#000;
   font-size:28px;  
 }
 
 h2 {
-  font-family: "Poltawski Nowy";
-  font-weight:700;
+  font-family: "Goblin One";
+  font-weight:400;
   font-style:normal;
   color:#000;
 }
