--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -4,7 +4,11 @@
 body {
   background-color: #fff;
   padding:50px;
-  font: 14px/1.5 "Noto Sans", "Poltawski Nowy", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Poltawski Nowy";
+  font:16px;
+  font-weight:400;
+  font-style:normal;
+  color:#000;
   color:#727272;
   font-weight:400;
 }
