--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -190,6 +190,11 @@ ul.downloads {
   background-color:#f0f0f0;
 }
 
+.list-1 {
+    padding:none;
+    list-style-type:none;
+}
+
 strong {
   color:#222;
   font-weight:700;
