--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -242,6 +242,11 @@ footer {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
+.imageborder {
+    border-style:dashed;
+    border-color:#000;
+}
+
 @media print, screen and (max-width: 960px) {
 
   div.wrapper {
