adding border below secrettitle

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -163,8 +163,8 @@ ul.downloads {
   height:40px;
 }
 
-.imageborder {
-  border-bottom: 1px solid #d3d3d3;
+.postborder {
+  border-bottom: 3px solid #d3d3d3;
   padding-bottom: 5px;
 }
 
