--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -39,6 +39,10 @@ h2 {
   font-weight:400;
   font-style:normal;
   color:#000;
+  a:hover, a:focus {
+    color:#000;
+    font-weight: bold;
+  }
 }
 
 h3, h4, h5, h6 {
@@ -46,12 +50,12 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#267CB9;
+  color:#000;
   text-decoration:none;
 }
 
 a:hover, a:focus {
-  color:#069;
+  color:#000;
   font-weight: bold;
 }
 
