--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
-.hoverbold:hover{
+.hoverbold:hover {
     font:bold;
+}
+
+.inline {
+    display: inline-block;
 }
