--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,11 @@
 .inline {
     display: inline-block;
 }
+
+.tabtitles span {
+  font-family: "Goblin One";
+  font-weight:400;
+  font-style:normal;
+  color:#000;
+  font-size:28px;  
+}
