--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,14 +11,15 @@
     display: inline-block;
 }
 
-.tabtitles span {
+.tabtitles button {
   font-family: "Goblin One";
   font-weight:400;
   font-style:normal;
   color:#000;
   font-size:28px;  
   text-decoration:none;
-  span:hover{
+}
+
+.tabtitles span:hover {
     font: bold; 
-    }
 }
