--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,9 @@
   font-style:normal;
   color:#000;
   font-size:28px;  
+  background: none;
+  border: none;
+  text-align: justify;
   text-decoration:none;
 }
 
