--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,17 +12,18 @@
 }
 
 .tabtitles button {
-  font-family: "Goblin One";
-  font-weight:400;
-  font-style:normal;
-  color:#000;
-  font-size:28px;  
-  background: none;
-  border: none;
-  text-align: justify;
-  text-decoration:none;
+    font-family: "Goblin One";
+    font-weight:400;
+    font-style:normal;
+    color:#000;
+    font-size:28px;  
+    background: none;
+    border: none;
+    text-align: justify;
+    text-decoration:none;
+    cursor: pointer;
 }
 
-.tabtitles span:hover {
+.tabtitles button:hover {
     font: bold; 
 }
