--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 
 .hoverbold:hover {
     font:bold;
+    color:aquamarine;
 }
 
 .inline {
@@ -20,5 +21,6 @@
     background: none;
     border: none;
     text-align: justify;
+    text-decoration:none;
     cursor: pointer;
 }
