--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,6 @@ layout: default
 
 {{content}}
 
-{% if page.categories %}
+<!---{% if page.categories %}
   <small>categories: <em>{{ page.categories | join: "</em> - <em>" }}</em></small>
-{% endif %}
+{% endif %}--->
