--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@
     font-size:24px;  
     background: none;
     border: none;
-    text-align: justify;
+    text-align: justify-all;
     text-decoration:none;
     cursor: pointer;
     margin-bottom:10px;
