--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,8 +25,8 @@
     font-size:24px;  
     background: none;
     border: none;
-    text-align: justify-all;
+    text-justify: auto;
     text-decoration:none;
     cursor: pointer;
-    margin-bottom:10px;
+    margin-bottom:7px;
 }
