--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,12 +22,11 @@
     font-weight:400;
     font-style:normal;
     color:#000;
-    font-size:24px;  
+    font-size:28px;  
     background: none;
     border: none;
-    text-justify: auto;
     text-decoration:none;
     cursor: pointer;
     margin-bottom:7px;
-    align-content: space-between;
+    justify-items: center;
 }
