--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -9,8 +9,6 @@ body {
   font-weight:400;
   font-style:normal;
   color:#000;
-  color:#727272;
-  font-weight:400;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,6 +18,11 @@ h1, h2, h3, h4, h5, h6 {
 
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
+  font-family: "Poltawski Nowy";
+  font:16px;
+  font-weight:400;
+  font-style:normal;
+  color:#000;
 }
 
 h1, h2, h3 {
