--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,4 +33,6 @@
     cursor: pointer;
     margin-bottom:7px;
     justify-items: center;
+    border-bottom: 2px solid #d3d3d3;
+    padding-bottom:5px;
 }
