--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,13 +26,14 @@
     font-weight:400;
     font-style:normal;
     color:#000;
-    font-size:24px;  
+    font-size:26px;  
     background: none;
     border: none;
     text-decoration:none;
     cursor: pointer;
     margin-bottom:7px;
-    justify-items: center;
+    display: flex;
+    justify-content: space-between;
     border-bottom: 2px solid #d3d3d3;
     padding-bottom:5px;
 }
