--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,7 @@
     text-decoration:none;
     cursor: pointer;
     margin-bottom:7px;
+    justify-items: center;
     display: flex;
     justify-content: space-between;
     border-bottom: 2px solid #d3d3d3;
