--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,8 +32,9 @@
     text-decoration:none;
     cursor: pointer;
     margin-bottom:7px;
-    justify-items: center;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     border-bottom: 2px solid #d3d3d3;
     padding-bottom:5px;
 }
