changing nav buttons

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,3 +38,11 @@
     border-bottom: 2px solid #d3d3d3;
     padding-bottom:5px;
 }
+
+.index-nav-butts {
+    
+}
+
+.flex-container {
+    display: flex;
+}
