--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,35 +12,34 @@
     color:darkolivegreen;
 }
 
-.inline {
-    display: inline-block;
-}
-
 .postborder {
   border-bottom: 2px solid #d3d3d3;
   padding-bottom:5px;
 }
 
-.tabtitles button {
+.index-nav-butts {
     font-family: "Goblin One";
     font-weight:400;
     font-style:normal;
+    font-size:26px; 
     color:#000;
-    font-size:26px;  
+    cursor: pointer;
+    text-decoration:none;
     background: none;
     border: none;
-    text-decoration:none;
-    cursor: pointer;
-    margin-bottom:7px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     border-bottom: 2px solid #d3d3d3;
+    margin-bottom:7px;
     padding-bottom:5px;
 }
 
-.index-nav-butts {
-    
+.index-nav-butts:hover {
+    font:bold;
+    color:darkolivegreen;
+}
+
+.index-nav-butts:focus {
+    font:bold;
+    color:darkolivegreen;
 }
 
 .flex-container {
