--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,3 +47,9 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+@media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
+  }
+}
