--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -76,7 +76,8 @@ blockquote {
   border-left:1px solid #e5e5e5;
   margin:0;
   padding:0 0 0 20px;
-  font-style:italic;
+  font-family: "Poltawski-Nowy";
+  font: "Poltawski-Nowy-Italic";
 }
 
 code, pre {
