--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -5,8 +5,9 @@ body {
   background-color: #fff;
   padding:50px;
   font-family: "Poltawski Nowy";
+    font-weight:400;
+    font-style: normal;
   font:16px;
-  font-weight:400;
   color:#000;
 }
 
@@ -18,9 +19,9 @@ h1, h2, h3, h4, h5, h6 {
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
   font-family: "Poltawski Nowy";
+    font-weight:400;
+    font-style: normal;
   font:16px;
-  font-weight:400;
-  font-style:normal;
   color:#000;
 }
 
@@ -30,16 +31,16 @@ h1, h2, h3 {
 
 h1 {
   font-family: "Goblin One";
-  font-weight:400;
-  font-style:normal;
+    font-weight:400;
+    font-style:normal;
   color:#000;
   font-size:28px;  
 }
 
 h2 {
   font-family: "Goblin One";
-  font-weight:400;
-  font-style:normal;
+    font-weight:400;
+    font-style:normal;
   color:#000;
 }
 
@@ -77,7 +78,9 @@ blockquote {
   margin:0;
   padding:0 0 0 20px;
   font-family: "Poltawski-Nowy";
-  font: "Poltawski-Nowy-Italic";
+    font-weight: 400;
+    font-style: italic;
+  color: #494949;
 }
 
 code, pre {
@@ -138,9 +141,9 @@ header {
       color: #000000;
 }
   font-family: "Poltawski Nowy";
+    font-weight:400;
+    font-style:normal;
   font:16px;
-  font-weight:400;
-  font-style:normal;
   color:#000;
   width:270px;
   float:left;
@@ -233,9 +236,9 @@ hr {
 
 footer {
   font-family: "Poltawski Nowy";
+    font-weight:400;
+    font-style:normal;
   font:16px;
-  font-weight:400;
-  font-style:normal;
   color:#000;
   width:270px;
   float:left;
