--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,8 +19,8 @@
 
 .index-nav-butts {
     font-family: "Goblin One";
-    font-weight:400;
-    font-style:normal;
+        font-weight:400;
+        font-style:normal;
     font-size:26px; 
     color:#000;
     cursor: pointer;
@@ -52,4 +52,12 @@
   .flex-container {
     flex-direction: column;
   }
+}
+
+.stupidheader {
+    font-family: "Goblin One";
+        font-weight:400;
+        font-style:normal;
+    font-size:26px; 
+    color:#000;
 }
