--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,4 +60,7 @@
         font-style:normal;
     font-size:26px; 
     color:#000;
+    border-bottom: 2px solid #d3d3d3;
+    margin-bottom:7px;
+    padding-bottom:5px;
 }
