--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,3 +64,24 @@
     margin-bottom:7px;
     padding-bottom:5px;
 }
+
+.closeread {
+    font-family: "Poltawski-Nowy";
+        font-weight: 400;
+        font-style: italic;
+    color: #494949;
+    border-left:1px solid #e5e5e5;
+    margin:0;
+    padding:0 0 0 20px;
+}
+
+.closereadjust {
+    font-family: "Poltawski-Nowy";
+        font-weight: 400;
+        font-style: italic;
+    text-align: justify;
+        color: #494949;
+    border-left:1px solid #e5e5e5;
+    margin:0;
+    padding:0 0 0 20px;
+}
