--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,6 +71,7 @@
         font-style: italic;
     color: #494949;
     border-left:1px solid #e5e5e5;
+    border-bottom:0px;
     margin:0;
     padding:0 0 0 20px;
 }
@@ -82,6 +83,7 @@
     text-align: justify;
         color: #494949;
     border-left:1px solid #e5e5e5;
+    border-bottom:0px;
     margin:0;
     padding:0 0 0 20px;
 }
