--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,6 +84,7 @@
         color: #494949;
     border-left:1px solid #e5e5e5;
     border-bottom:0px;
-    margin:0;
+    float: left;
+    margin:20px;
     padding:0 0 0 20px;
 }
