--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -85,6 +85,6 @@
     border-left:1px solid #e5e5e5;
     border-bottom:0px;
     float: left;
-    margin:20px;
+    margin:0;
     padding:0 0 0 20px;
 }
