--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,7 +71,6 @@
         font-style:normal;
     color: #000;
     border-bottom:0px;
-    float: right;
 }
 
 .closereadjust {
@@ -82,11 +81,8 @@
         color: #494949;
     border-left:1px solid #e5e5e5;
     border-bottom:0px;
+    float: left;
+    width: 200px;
     margin:20px;
     padding:0 0 0 20px;
-}
-
-.closetablejust {
-    float: left;
-    border-bottom:0px;
 }
