--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,6 +4,9 @@ layout: default
 
 <small>{{ page.date | date: "%D %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
+{% if page.subtitle %}
+<h2>{{ page.subtitle }}</h2>
+{ endif %}
 <p class="view">by {{ page.author | default: site.author }}</p>
 
 {{content}}
