--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -26,9 +26,9 @@ p, ul, ol, table, pre, dl {
 }
 
 h1, h2, h3 {
-  font-family: "Poltawski Nowy";
+  font-family: "Goblin One";
     font-weight:400;
-    font-style: normal;
+    font-style:normal;
   line-height:1.1;
 }
 
