--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,7 +7,7 @@ layout: default
 {% if page.subtitle %}
 <h3>{{ page.subtitle }}</h3>
 {% endif %}
-<p class="view">by {{ page.author | default: site.author }}</p>
+<!---<p class="view">by {{ page.author | default: site.author }}</p>--->
 
 {{content}}
 
