--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
+    
+<div class="flex-container">
+  <button class="index-nav-butts" onclick="opentabs('Publications')">Publications</button>
+  <button class="index-nav-butts" onclick="opentabs('Stream')">Downstream</button>
+  <button class="index-nav-butts" onclick="opentabs('About')">About</button>
+</div>
+    
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
