--- a/_layouts/stream.html
+++ b/_layouts/stream.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<small>{{ page.date | date: "%D %M %Y" }}</small>
+<small>{{ page.date | date: "%D %Y" }}</small>
 <h1>{{ page.title }}</h1>
 {% if page.subtitle %}
 <h3>{{ page.subtitle }}</h3>
