--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -86,3 +86,9 @@
     margin:20px;
     padding:0 0 0 20px;
 }
+
+.siteheader {
+    text-align: justify-all;
+      font-size:40px;
+      color: #000000;
+}
