--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -240,7 +240,7 @@ footer {
   color:#000;
   width:270px;
   float:left;
-  position:fixed;
+  position:static;
   bottom:50px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
