--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,6 +87,11 @@
     padding:0 0 0 20px;
 }
 
+.gifselfie {
+    float: right;
+    width: 50%;
+}
+
 .siteheader {
     text-align: justify-all;
       font-size:40px;
