--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -88,7 +88,9 @@
 }
 
 .gifselfie {
-    padding: 20px;
+        font-size: 10px;
+        font-style: italic;
+    padding: 0 0 20px 20px;
     float: right;
     width: 50%;
 }
