--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -88,16 +88,15 @@
 }
 
 .gifflex {
-    float: right;
     display: flex;
+    float: right;
     flex-direction: column;
         font-size: 12px;
         font-style: italic;
     padding: 0 0 20px 20px;
 }
 
-.gifwidth {
-    float: right;
+.gifflex > div {
     width: 50%;
 }
 
