--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,7 +51,7 @@
 .list-1 {
     margin-left:0;
     padding-left:0;
-    margin-bottom:100px;
+    padding-bottom:100px;
     list-style-type:none;
 }
 
