--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <h1 class="siteheader"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <button class="index-nav-butts" onclick="opentabs('Gallery')">Gallery</button>
+        <!---<button class="index-nav-butts" onclick="opentabs('Gallery')">Gallery</button>--->
 
         
       </header>
