--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -112,37 +112,42 @@
       color: #000000;
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
+.gallery {
+  display: grid;
+  grid-gap: 5px;
+ }
+ 
+.gallery img {
+   width: 100%;
+   height: 100%;
+ }
+ 
+@media (max-width: 575.98px) {
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
+   }
 }
 
-/* Create four equal columns that sits next to each other */
-.column {
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
+@media (max-width: 768.98px) and (min-width: 576px) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+   }
 }
 
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
+@media (max-width: 991.98px) and (min-width: 768px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr); 
   }
 }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
+@media (max-width: 1199.98px) and (min-width: 992px) {
+  .gallery {
+    grid-template-columns: repeat(4, 1fr); 
+  }
+}
+
+@media (min-width: 1200px) {
+  .gallery {
+    grid-template-columns: repeat(5, 1fr); 
   }
 }
