--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -112,42 +112,52 @@
       color: #000000;
 }
 
-.gallery {
-  display: grid;
-  grid-gap: 5px;
- }
- 
-.gallery img {
-   width: 100%;
-   height: 100%;
- }
- 
-@media (max-width: 575.98px) {
-  .gallery {
-    grid-template-columns: repeat(1, 1fr);
-   }
+//gallery stuff
+
+.galul {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-@media (max-width: 768.98px) and (min-width: 576px) {
-  .gallery {
-    grid-template-columns: repeat(2, 1fr);
-   }
+.galli {
+  height: 40vh;
+  flex-grow: 1;
 }
 
-@media (max-width: 991.98px) and (min-width: 768px) {
-  .gallery {
-    grid-template-columns: repeat(3, 1fr); 
+.galli:last-child {
+  flex-grow: 10;
+}
+
+.galimg {
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
+@media (max-aspect-ratio: 1/1) {
+  .galli {
+    height: 30vh;
   }
 }
-
-@media (max-width: 1199.98px) and (min-width: 992px) {
-  .gallery {
-    grid-template-columns: repeat(4, 1fr); 
+@media (max-height: 480px) {
+  .galli {
+    height: 80vh;
   }
 }
+@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
+  .galul {
+    flex-direction: row;
+  }
 
-@media (min-width: 1200px) {
-  .gallery {
-    grid-template-columns: repeat(5, 1fr); 
+  .galli {
+    height: auto;
+    width: 100%;
+  }
+
+  .galimg {
+    width: 100%;
+    max-height: 75vh;
+    min-width: 0;
   }
 }
