--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
           
-        <button class="index-nav-butts" onclick="opentabs('Gallery')">Gallery</button>
+        <!---<button class="index-nav-butts" onclick="opentabs('Gallery')">Gallery</button>--->
 
         
       </header>
