--- a/_sass/minimal.scss
+++ b/_sass/minimal.scss
@@ -1,5 +1,5 @@
 // Placeholder file. If your site uses
-//     @import "{{ site.theme }}";
+//     @use "{{ site.theme }}";
 // Then using this theme with jekyll-remote-theme will work fine.
-@import "jekyll-theme-minimal",
-@import "fonts";
+@use "jekyll-theme-minimal",
+@use "fonts";
