--- a/_sass/minimal.scss
+++ b/_sass/minimal.scss
@@ -1,5 +1,5 @@
 // Placeholder file. If your site uses
-//     @use "{{ site.theme }}";
+//     @import "{{ site.theme }}";
 // Then using this theme with jekyll-remote-theme will work fine.
-@use "jekyll-theme-minimal",
-@use "fonts";
+@import "jekyll-theme-minimal",
+@import "fonts";
