--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@
   padding-bottom:5px;
 }
 
-.index-nav-butts {
+.creations-button, .index-nav-butts {
     font-family: "Goblin One";
         font-weight:400;
         font-style:normal;
@@ -30,6 +30,49 @@
     border-bottom: 2px solid #d3d3d3;
     margin-bottom:7px;
     padding-bottom:5px;
+}
+/* Dropdown Container */
+.creations-dropdown {
+  position: relative; /* Needed for positioning the dropdown content */
+}
+/* Dropdown Content Styles */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  left: 0;
+  top: 100%;
+  margin-top: 5px;
+}
+
+.dropdown-content button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #fff;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+}
+
+.dropdown-content button:hover {
+  background-color: #ddd;
+}
+/* Show Dropdown on Creations Hover */
+.creations-dropdown:hover .dropdown-content {
+  display: block;
+}
+/* Tab Content Styles (Important for visibility) */
+.tabs {
+  display: none;
+  padding: 20px;
+}
+
+.tabs.active { /* If you use a class "active" to show tabs */
+  display: block;
 }
 
 .index-nav-butts:hover {
@@ -46,6 +89,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.flex-container button {
+  margin-right: 10px;
 }
 
 .list-1 {
