--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,8 +30,6 @@
     border-bottom: 2px solid #d3d3d3;
     margin-bottom:7px;
     padding-bottom:5px;
-    width: 100%; /* Make the button fill the container */
-    text-align: left; /* Align text to the left if needed */
 }
 /* Dropdown Container */
 .creations-dropdown {
@@ -45,7 +43,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  left: 0;
+  top: calc(100% - 5px); /* Adjust 5px as needed */
   top: 100%;
   margin-top: 5px;
 }
