--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,8 @@
     border-bottom: 2px solid #d3d3d3;
     margin-bottom:7px;
     padding-bottom:5px;
+    width: 100%; /* Make the button take full width */
+    text-align: left; /* Optional: align text to the left */
 }
 /* Dropdown Container */
 .creations-dropdown {
@@ -104,7 +106,6 @@
 @media (max-width: 800px) {
   .flex-container {
     flex-direction: column;
-    justify-content: center;
   }
 }
 
