--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -92,37 +92,8 @@ table {
   border-collapse:collapse;
 }
 
-/* th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
-}
-
-dt {
-  color:#444;
-  font-weight:700;
-}
-
-th {
-  color:#444;
-} */
-
 img {
   max-width:100%;
-}
-
-kbd {
-  background-color: #fafbfc;
-  border: 1px solid #c6cbd1;
-  border-bottom-color: #959da5;
-  border-radius: 3px;
-  box-shadow: inset 0 -1px 0 #959da5;
-  color: #444d56;
-  display: inline-block;
-  font-size: 11px;
-  line-height: 10px;
-  padding: 3px 5px;
-  vertical-align: middle;
 }
 
 header {
@@ -282,6 +253,15 @@ footer {
   src: local('Poltawski Nowy Bold Italic'),
        local('PoltawskiNowy-Italic'),
        url('../fonts/Poltawski-Nowy/static/PoltawskiNowy-Italic.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Garamond';
+  font-weight: 400;
+  font-style: regular;
+  src: local('Garamond Text'),
+       local('GaramondATFText'),
+       url('../fonts/Garamond/GaramondATFText.otf') format('opentype');
 }
 
 /* END FONT WORLD */
