--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -423,7 +423,7 @@ footer {
       color: #000000;
 }
 
-@media (max-aspect-ratio: 1/1) {
+/* @media (max-aspect-ratio: 1/1) {
   .galli {
     height: 30vh;
   }
@@ -448,4 +448,4 @@ footer {
     max-height: 75vh;
     min-width: 0;
   }
-}
+} */
