--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -301,7 +301,7 @@ footer {
 /* Dropdown Content Styles */
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: relative;
   background-color: #fff;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
