--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -325,7 +325,7 @@ footer {
 }
 /* Show Dropdown on Creations Hover */
 .creations-dropdown:hover .dropdown-content {
-  display: block;
+  display: inline-block;
 }
 /* Tab Content Styles (Important for visibility) */
 .tabs {
