--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,24 +27,24 @@ p, ul, ol, table, dl {
 }
 
 h1, h2, h3 {
-  font-family: "Goblin One";
-    font-weight:400;
-    font-style:regular;
+    font-family: "Berlin Sans";
+        font-weight:700;
+        font-style:demibold;
   line-height:1.1;
 }
 
 h1 {
-  font-family: "Goblin One";
-    font-weight:400;
-    font-style:regular;
+    font-family: "Berlin Sans";
+        font-weight:700;
+        font-style:demibold;
   color:#000;
   font-size:28px;  
 }
 
 h2 {
-  font-family: "Goblin One";
-    font-weight:400;
-    font-style:regular;
+    font-family: "Berlin Sans";
+        font-weight:700;
+        font-style:demibold;
   color:#000;
 }
 
@@ -289,9 +289,9 @@ footer {
 }
 
 .creations-button, .index-nav-butts {
-    font-family: "Goblin One";
-        font-weight:400;
-        font-style:regular;
+    font-family: "Berlin Sans";
+        font-weight:700;
+        font-style:demibold;
     font-size:26px; 
     color:#000;
     cursor: pointer;
@@ -380,9 +380,9 @@ footer {
 }
 
 .stupidheader {
-    font-family: "Goblin One";
-        font-weight:400;
-        font-style:regular;
+    font-family: "Berlin Sans";
+        font-weight:700;
+        font-style:demibold;
     font-size:26px; 
     color:#000;
     border-bottom: 2px solid #d3d3d3;
