--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,7 +36,7 @@ h1, h2, {
 h3 {
     font-family: "Berlin Sans";
         font-weight:700;
-        font-style:demibold;
+        font-style:regular;
   line-height:1.1;
 }
 
