--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       </section>
       <footer>
         <p>Contact me here: <a href = "mailto:maxie.kline@gmail.com">maxie.kline@gmail.com</a></p>
-        <p>Or at <a href = "http://instagram.com/_u/eekmaxwell/">eekmaxwell</a> on Instagram.</p>
+        <p>Or at <a href = "http://instagram.com/_u/maxie.rodeo/">maxie.rodeo</a> on Instagram.</p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
